# indic_nlp_library

./: pyproject.toml
indicnlp/script/: english_script.py  indic_scripts.py  phonetic_sim.py
indicnlp/transliterate/: unicode_transliterate.py
