[tool.poetry]
name = "indic-nlp-library"
version = "0.92.1"
description = "The goal of the Indic NLP Library is to build Python based libraries for common text processing and Natural Language Processing in Indian languages."
authors = ["Anoop Kunchukuttan <anoop.kunchukuttan@gmail.com>"]
license = "MIT"
readme = "README.md"

classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[tool.poetry.dependencies]
python = "^3.5"
Morfessor = "^2.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
